[package]
name = "dark-integers"
version = "0.0.1"
authors = ["Bogdan Opanchuk <bogdan@opanchuk.net>"]
edition = "2018"
license = "MIT"
description = "Experimental fixed-size multi-limb integer library"
repository = "https://github.com/fjarri/dark-integers"
readme = "README.md"
categories = ["no-std"]

[dependencies]
num-traits = "0.2"
subtle = "2.4"

[dev-dependencies]
num-bigint = "0.4"
proptest = "1.0"
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "bench"
path = "bench/bench.rs"
harness = false
